<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.quanticheart.deviceadministration.fragments.GeneralFragment"
        android:title="@string/header_general" />

    <header
        android:fragment="com.quanticheart.deviceadministration.fragments.QualityFragment"
        android:title="@string/header_quality" />

    <header
        android:fragment="com.quanticheart.deviceadministration.fragments.ExpirationFragment"
        android:title="@string/header_expiration" />

    <header
        android:fragment="com.quanticheart.deviceadministration.fragments.LockWipeFragment"
        android:title="@string/header_lock_wipe" />

    <header
        android:fragment="com.quanticheart.deviceadministration.fragments.EncryptionFragment"
        android:title="@string/header_encryption" />

</preference-headers>
